--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
     else
       brew install cmake
     fi
+  - sudo apt-get install -y g++-4.8; export CXX="g++-4.8";
 
 before_script:
   - mkdir build
