--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: cpp
 compiler:
   - gcc
 
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+  - sudo update-alternatives --remove-all gcc
+  - sudo update-alternatives --remove-all g++
+
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
   - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
@@ -14,7 +19,8 @@ install:
     else
       brew install cmake
     fi
-  - sudo apt-get install g++
+  - sudo apt-get install gcc-4.8
+  - sudo apt-get install g++-4.8
 
 before_script:
   - mkdir build
