--- a/.travis.yml
+++ b/.travis.yml
@@ -3,22 +3,17 @@ language: cpp
 compiler:
   - gcc
 
-before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-  - sudo update-alternatives --remove-all gcc
-  - sudo update-alternatives --remove-all g++
-
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
   - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
   - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
-      mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+    CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
+    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
     export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-    else
-      brew install cmake
-    fi
+  - |
+    CMAKE_URL="http://www.netgull.com/gcc/releases/gcc-5.2.0/gcc-5.2.0.tar.gz"
+    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C gcc
+    export PATH=${DEPS_DIR}/gcc/bin:${PATH}
   - sudo apt-get install gcc-4.8
   - sudo apt-get install g++-4.8
 
