--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 
 compiler:
   - gcc
+  - g++
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
@@ -10,10 +11,8 @@ install:
     CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
     mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
     export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-  - |
-    CMAKE_URL="http://www.netgull.com/gcc/releases/gcc-5.2.0/gcc-5.2.0.tar.gz"
-    mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C gcc
-    export PATH=${DEPS_DIR}/gcc/bin:${PATH}
+  - sudo apt-get install -y gcc-5
+  - sudo apt-get install -y g++-5
 
 before_script:
   - mkdir build
